--- a/src/client/styles/_game-container.css
+++ b/src/client/styles/_game-container.css
@@ -69,7 +69,7 @@
 .game-subtitle {
     font-size: 0.95rem;
     font-weight: normal;
-    color: #888;
+    color: #555;
     font-style: italic;
     margin-bottom: 5px;
 }
